fix using class instead of className in jsx files, fix css alignment for header

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -2,6 +2,10 @@ header {
   background: gray;
 }
 
+ul{
+    margin-left: auto;
+}
+
 nav li {
   cursor: pointer;
 }
