--- a/src/components/Resume/style.css
+++ b/src/components/Resume/style.css
@@ -4,3 +4,7 @@ ul {
 .top-title {
   margin-top: 20px;
 }
+
+.link {
+  text-decoration: none;
+}
